--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -94,6 +94,7 @@ body {
   padding: 2rem 3rem;
   display: flex;
   justify-content: flex-start;
+  line-height: 95%;
 }
 
 button:hover {
@@ -102,14 +103,36 @@ button:hover {
   border: solid 1px #ffffff;
 }
 
-.arrow {
+/* .arrow {
   width: 28px;
   height: 28px;
-  background-color: #ffffff;
   display: flex;
   align-self: center;
   position: absolute;
   left: 300px;
+} */
+
+.arrow {
+  display: block;
+  margin: 25px auto;
+  width: 15px;
+  height: 15px;
+  border-top: 2px solid #000;
+  border-left: 2px solid #000;
+  transform: rotate(135deg);
+  position: absolute;
+  left: 308px;
+}
+
+.arrow::after {
+  content: "";
+  display: block;
+  width: 2px;
+  height: 45px;
+  background-color: black;
+  transform: rotate(-45deg) translate(15px, 4px);
+  left: 0;
+  top: 0;
 }
 
 .btn {
@@ -132,23 +155,23 @@ button:hover {
 .sidebar-info {
   border-radius: 2rem;
   border: #000000 1px solid;
-  background: linear-gradient(to bottom right, #ffffff 20%, #00ff57 80%);
+  background: linear-gradient(to bottom right, #ffffff 30%, #00ff57 90%);
+  filter: sepia(0.2);
   padding-left: 10rem;
-  padding-top: 6.28rem;
+  padding-top: 7rem;
   padding-bottom: 39.6rem;
   grid-column: 3/4;
   grid-row: 1/3;
   width: 108.8rem;
   height: 92rem;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
 }
 
 .sidebar-info__data {
   font-size: 20rem;
   letter-spacing: -1.2rem;
   font-weight: 400;
+  line-height: 14.5rem;
+  margin-bottom: 1.9rem;
 }
 
 .sidebar-info__name {
@@ -159,9 +182,4 @@ button:hover {
 
 .sidebar-info__temp {
   margin-bottom: 6.8rem;
-  height: 19.3rem;
-}
-
-.sidebar-info__co2 {
-  height: 19.3rem;
 }
