--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,157 +29,25 @@ body {
   font-size: 3.7rem;
   text-transform: uppercase;
   letter-spacing: 4.7rem;
-  text-align: center;
+  display: flex;
+  justify-content: center;
   margin-bottom: 3.3rem;
+  width: 100vw;
 }
 
-.sidebar-status_good {
-  background-color: #7affa7;
-  border-radius: 2rem;
-  padding: 6.28rem 6rem 6.662rem 6rem;
-  grid-column: 1/3;
-  grid-row: 1/2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.sidebar-status_bad {
-  background-color: #ff8a7a;
-  border-radius: 2rem;
-  padding: 6.28rem 6rem 6.662rem 6rem;
-  grid-column: 1/3;
-  grid-row: 1/2;
-}
-
-.sidebar-status__header {
-  font-size: 8.9rem;
-  letter-spacing: -0.5rem;
-  font-weight: 500;
-}
-
-.sidebar-status__text {
-  font-size: 3.4rem;
-  font-weight: 400;
-}
-
-.sidebar-days {
-  background-color: #000000;
-  border-radius: 2rem;
-  color: #ffffff;
-  grid-column: 1/2;
-  grid-row: 2/3;
-  padding: 5.5rem 2rem 3.6rem 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.sidebar-days__header {
-  color: #ffffff;
-  font-size: 5.5rem;
-  font-weight: 500;
-  letter-spacing: -0.3rem;
-}
-
-.sidebar-days__btn {
-  background-color: #ffffff;
-  border-radius: 10rem;
-  border: none;
-  width: 100%;
-  height: 6.4rem;
-  font-size: 2.5rem;
-  letter-spacing: -1.5px;
-  font-weight: 500;
-  padding: 2rem 3rem;
-  display: flex;
-  justify-content: flex-start;
-  line-height: 95%;
-}
-
-button:hover {
-  background-color: #000000;
-  color: #ffffff;
-  border: solid 1px #ffffff;
-}
-
-/* .arrow {
-  width: 28px;
-  height: 28px;
-  display: flex;
-  align-self: center;
-  position: absolute;
-  left: 300px;
-} */
-
-.arrow {
-  display: block;
-  margin: 25px auto;
-  width: 15px;
-  height: 15px;
-  border-top: 2px solid #000;
-  border-left: 2px solid #000;
-  transform: rotate(135deg);
-  position: absolute;
-  left: 308px;
-}
-
-.arrow::after {
-  content: "";
-  display: block;
-  width: 2px;
-  height: 45px;
-  background-color: black;
-  transform: rotate(-45deg) translate(15px, 4px);
-  left: 0;
-  top: 0;
-}
-
-.btn {
-  display: flex;
-  justify-content: end;
-}
-
-.sidebar-logo {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  border: #000000 1px solid;
-  border-radius: 2rem;
-}
-
-.logo {
-  width: 100%;
-  height: 100%;
-}
-
-.sidebar-info {
-  border-radius: 2rem;
-  border: #000000 1px solid;
-  background: linear-gradient(to bottom right, #ffffff 30%, #00ff57 90%);
-  filter: sepia(0.2);
-  padding-left: 10rem;
-  padding-top: 7rem;
-  padding-bottom: 39.6rem;
-  grid-column: 3/4;
-  grid-row: 1/3;
-  width: 108.8rem;
-  height: 92rem;
-}
-
-.sidebar-info__data {
-  font-size: 20rem;
-  letter-spacing: -1.2rem;
-  font-weight: 400;
-  line-height: 14.5rem;
-  margin-bottom: 1.9rem;
-}
-
-.sidebar-info__name {
-  font-size: 4rem;
-  font-weight: 700;
-  letter-spacing: -2.4px;
-}
-
-.sidebar-info__temp {
-  margin-bottom: 6.8rem;
+@media (max-width: 650px) {
+  html {
+    font-size: 50%;
+  }
+  body {
+    padding: 2rem;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+  .heading {
+    font-size: 3rem;
+    letter-spacing: 2rem;
+  }
 }
